--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.disable {
+body {
+    font-family: 'Gill Sans', sans-serif;
+}
+
+.canDisable {
     @apply disabled:opacity-50;
+}
+
+.active {
+    @apply outline-dashed bg-blue-500 text-white;
 }
